--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,6 +1,7 @@
 <div class="col-md-2">
 	<ul class="list-inline list-group">
+		<li class="list-group-item"><a href="{{ url_for('index') }}">Home</a></li>
 		{% for chapter in chapters %}
-			<li class="list-group-item"><a href="{{ url_for('viewSection', section=chapter) }}">{{ chapter }}</a></li>
+			<li class="list-group-item"><a href="{{ url_for('viewSection', section=chapter) }}">{{ chapters[chapter]['title'] }}</a></li>
 		{% endfor %}
 </div>
